<resources>
    <string name="app_name">alainResume</string>
    <string name="title_activity_main">Alain\'s Resume</string>
    <string name="title_projects_skills_activity">ProjectsSkillsActivity</string>

    <string name="action_settings">Settings</string>
    <string name="my_name">Alain Pimentel</string>
    <string name="first_name">Alain</string>
    <string name="last_name">Pimentel</string>
    <string name="phone_number">(423)910-9115</string>
    <string name="phone_number_uri">4239109115</string>
    <string name="email">halainpb@gmail.com</string>
    <string name="introduction">I recently graduated with a BS in CS and Math. I\'m passionate Android developer with a wide range of backend and frontend skills.\nWhen I\'m not programming you will find me playing soccer, talking about Game of Thrones, playing FIFA with my mates, or climbing. Feel free to contact me anytime.</string>
    <string name="full_address">242 Curtner Ave.\nApt. F\nPalo Alto, Ca 94306</string>
    <string name="about_me">About Me</string>
    <string name="contact_info">Contact Info</string>
    <string name="important_links">Important Links</string>
    <string name="education">Education</string>
    <string name="school">Southern Adventist University | May 2015</string>
    <string name="major">B.S. Computer Science, Mathematics</string>
    <string name="gpa">GPA 3.86</string>
    <string name="experience">Experience</string>
    <string name="link_to_experience">Internship, projects and skills</string>
    // Address
    <string name="ad_street">242 Curtner Ave.</string>
    <string name="ad_street2">Apt. F</string>
    <string name="ad_city">Palo Alto</string>
    <string name="ad_state">CA</string>
    <string name="ad_zip">94306</string>
    // Links
    <string name="link_github">hpimentel</string>
    <string name="link_github_url">https://github.com/hpimentel</string>
    <string name="link_linkedin">alainpimentel</string>
    <string name="link_linkedin_url">https://www.linkedin.com/in/alainpimentel</string>
    <string name="link_blog">hpimentel.github.io</string>
    <string name="link_blog_url">http://hpimentel.github.io/</string>
    <string name="link_resume">Resume pdf</string>
    <string name="link_resume_url">http://hpimentel.github.io/documents/AlainPimentel.pdf</string>
    // Add contact
    <string name="add_contact_title">Add Alain\'s info to your contacts?</string>
    <string name="add_contact_message">You will be able to edit the contact\'s info before adding it.</string>
    <string name="add_contact_positive">ADD</string>
    <string name="add_contact_negative">CANCEL</string>
    <string name="add_contact_exists_title">Alain\'s contact has already been saved.</string>

    //Project detail stuff
    <string name="project_description">Responsibilities</string>
    <string name="project_technologies">Technologies</string>
    <string name="project_info">Description</string>

    //Experience
    <string name="circ_title">Software Engineer Intern at CIRC</string>
    <string name="circ_date">April 2014 to May 2015</string>
    <string name="circ_description">I worked on a couple Android apps, one was published on the Play Store. For web, I used a LAMP (PHP) stack to develop several web apps. It involved using frontend jQuery, HTML/CSS, and Bootstrap 3 for frontend futures. I also did extensive work on backend features and Linux servers. </string>
    <string name="math_title">Math Tutor/Grader/TA at SAU</string>
    <string name="math_date">Fall 2011 - Winter 2014</string>
    <string name="math_description">Graded and tutored all of the lower-division Math courses at SAU. I was also the teaching assistant of Dr. Anderson for Survey of Math, College Algebra, and Calculus II.</string>

    //Skills
    <string name="skill_advanced">Advance</string>
    <string name="skills_advanced">C++, Java (Android), PHP, MySQL</string>
    <string name="skill_experience">Experience</string>
    <string name="skills_experience">Python, Javascript, jQuery, Scala, REST APIs, JSON</string>

</resources>
