<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="@dimen/expanded_margin_start"
            app:expandedTitleMarginEnd="@dimen/expanded_margin_end">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/iv_profile_pic"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <android.support.v7.widget.CardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_me"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/introduction"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/education"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/school"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/major" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gpa"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_info"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                    <RelativeLayout
                        android:id="@+id/relativelayout_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/ic_phone"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentLeft="true"
                            android:paddingRight="12dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/ic_call_black_48dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number"
                            android:layout_toRightOf="@id/ic_phone"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/relativelayout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/ic_email"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentLeft="true"
                            android:paddingRight="12dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/ic_email_black_48dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:layout_toRightOf="@id/ic_email"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/relativelayout_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/ic_address"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentLeft="true"
                            android:paddingRight="12dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/ic_place_black_48dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/full_address"
                            android:layout_toRightOf="@id/ic_address"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/important_links"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                    <RelativeLayout
                        android:id="@+id/relativelayout_github"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/ic_github"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentLeft="true"
                            android:paddingRight="12dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/ic_github"/>
                        <TextView
                            android:id="@+id/tv_github"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/link_github"
                            android:layout_toRightOf="@id/ic_github"
                            android:layout_centerVertical="true"
                            android:focusable="true"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/relativelayout_linkedin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/ic_linkedin"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentLeft="true"
                            android:paddingRight="12dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/ic_linkedin"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/link_linkedin"
                            android:layout_toRightOf="@id/ic_linkedin"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/relativelayout_blog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/ic_blog"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentLeft="true"
                            android:paddingRight="12dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/ic_public_black_48dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/link_blog"
                            android:layout_toRightOf="@id/ic_blog"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/relativelayout_resume"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/ic_resume"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentLeft="true"
                            android:paddingRight="12dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/ic_file_download_black_48dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/link_resume"
                            android:layout_toRightOf="@id/ic_resume"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingbutton_add_contact"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@drawable/ic_add_white_48dp"
        android:layout_margin="@dimen/fab_margin"/>

</android.support.design.widget.CoordinatorLayout>
